- adaptations to minor Java changes - other minor changes
git-svn-id: http://svn.geogr.uni-jena.de/svn/jams/trunk@3615 cee23a32-52fb-0310-bcb1-fe94ad5b3aa2